# agentcorrect-landing

./: .assetsignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  CREATE_GITHUB_REPO.sh  DEPLOY.md  DEPLOY_INSTRUCTIONS.md  LICENSE  MANUAL_GITHUB_SETUP.md  Makefile  PUSH_TO_GITHUB.md  README.md  READY_TO_SHIP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SHIP_IT_NOW.md  WINDOWS_QUICKSTART.bat  WINDOWS_QUICKSTART.ps1  cursor-yolo.sh  demo_painkiller.py  fix_permissions.sh  index-designer.html  index-old.html  index-real.html  index.html  next.config.js  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  robots.txt  run_security_checks.sh  setup.py  sitemap.xml  start-yolo.sh  tailwind.config.ts  (+3 more)
.claude/: CLAUDE.md  settings.json  test-system.sh
.claude/agents/: code-generator.md  code-reviewer.md  debugger.md  doc-writer.md  linter.md  orchestrator.md  security-scan.md  test-writer.md
.claude/commands/: test-agents.md
.claude/hooks/: pre-edit-validation.py  prompt-enhancement.py  session-summary.py
.claude/memory/: metrics.csv  session-20250815-115136.json  session-20250815-120037.json  session-20250815-122046.json  session-20250815-122558.json  session-20250815-124108.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
agentcorrect/: __init__.py  __main__.py  cli.py  detectors_ultimate.py  output.py
agentcorrect-next/: README.md  package-lock.json  package.json  tailwind.config.ts
agentcorrect-next/app/: globals.css  layout.tsx  page.tsx
agentcorrect-next/components/: CTASticky.tsx  Credibility.tsx  DualPaths.tsx  FAQ.tsx  FooterBar.tsx  Gallery.tsx  Hero.tsx  HeroSplitScreen.tsx  HowItWorks.tsx  HowItWorksSimple.tsx  Pricing.tsx  PricingSimple.tsx  ProofTerminal.tsx  Security.tsx  Testimonials.tsx  WhyItWins.tsx
docs/: index.html
src/: index.js
tests/: __init__.py  conftest.py  test_detectors.py  test_spec_compliance.py
