[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcorrect"
version = "1.0.0"
description = "CI/CD guardrails that prevent AI agents from charging customers twice"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AgentCorrect Team", email = "support@agentcorrect.com"}]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai-safety", "cicd", "stripe", "payment", "idempotency", "llm", "agents", "owasp"]

[project.urls]
Homepage = "https://agentcorrect.com"
Repository = "https://github.com/ishaan-jaff/agentcorrect"
Documentation = "https://github.com/ishaan-jaff/agentcorrect#readme"
"Bug Tracker" = "https://github.com/ishaan-jaff/agentcorrect/issues"

[project.scripts]
agentcorrect = "agentcorrect.cli:main"

[tool.setuptools.packages.find]
include = ["agentcorrect*"]
exclude = ["tests*", "docs*"]